# libvirt-grpc-api

./: Cargo.toml  ajr@10.90.1.1  build.rs
proto/: libvirt_api.proto
src/: client.rs  lib.rs  server.rs  tests.rs  thread_safe_virt_conn.rs
src/protoc/: libvirt_api.rs  mod.rs
src/schema/: schema.rs
